# Kajetany_BIP

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  elements.py  items.csv  mail_delivery_service.py  main.py  parser.py  pyproject.toml  requirements.txt  setup.bat  setup.ps1  setup.sh
.github/workflows/: dev PR.yml  dev push.yml  schedule.yml
gh-pages/: index.html
src/: html_generator.py  item_repository.py  mail_delivery_service.py  mail_service.py  models.py
src/crawler/: crawler.py  datetime_extractor.py  http_client.py  parser.py  url_manipulation.py
src/crawler/nadarzyn_bip/: base_parser.py  crawler.py  parser.py
src/crawler/new/: base_parser.py  crawler.py  parser.py
src/crawler/old/: base_parser.py  bip_nadarzyn_list_parser.py  crawler.py
src/crawler/parsers/: base_parser.py  bip_nadarzyn_list_parser.py
src/models/: elements.py
src/parser/: __init__.py  crawler.py  http_client.py  parser.py
templates/: bip_report.html  email_template.html
tests/: conftest.py  fixture_items.py  run_all_tests.py  test_bip_report.py  test_datetime_extractor.py  test_email_template.py  test_mail_service.py  test_nadarzyn_bip_crawler.py  test_url_manipulation.py
