[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kajetany-bip"
version = "1.0.0"
description = "BIP Nadarzyn scraper for Kajetany notifications"
requires-python = ">=3.8"
dependencies = [
    "httpx",
    "selectolax",
    "pypdf",
    "pydantic",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.287",
    "pre-commit>=3.0.0"
]

[tool.setuptools]
py-modules = ["main", "parser", "mail_delivery_service", "elements"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"mail_delivery_service.py" = ["E501"]  # Allow long lines in HTML email templates

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
