[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kajetany-bip"
version = "1.0.0"
description = "BIP Nadarzyn scraper for Kajetany notifications"
requires-python = ">=3.8"
dependencies = [
    "httpx",
    "selectolax",
    "pypdf",
    "pydantic",
    "pandas",
    "jinja2"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.287",
    "pre-commit>=3.0.0",
    "python-dotenv"
]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "."]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"src/mail_delivery_service.py" = ["E501"]  # Allow long lines in HTML email templates

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
